--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 out/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/test/**/target/
+!**/src/Test/**/target/
 
 ### IntelliJ IDEA ###
 .idea/
@@ -27,7 +27,7 @@ out/
 /.nb-gradle/
 build/
 !**/src/main/**/build/
-!**/src/test/**/build/
+!**/src/Test/**/build/
 
 ### VS Code ###
 .vscode/
